# visualizer-server/src/lib.rs
@@ -1,6 +1,8 @@
 pub mod run;
 
+mod healthcheck;
 mod proto;
 mod solidity;
 
+pub use healthcheck::HealthCheckService;
 pub use solidity::SolidityVisualizerService;
